--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <!-- js -->
     <script src="js/jquery2.2.3.min.js"></script>
     <script src="js/index.js"></script>
@@ -70,7 +69,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/basic.css">
     <link rel="icon" href="images/mode-standard-phoenix-svgrepo-com.svg">
-    <title>Lemon Lin | My Basic Infomation</title>
+    <link rel="icon" href="images/music-svgrepo-com.svg">
+    <title>Yu Yizhen | My Personal Web</title>
 </head>
 
 <body>
@@ -94,6 +94,25 @@
         <div class="home-text animate__animated">
             <h1>Yizhen Yu</h1>
             <p>Major in physical therapy in Tzu Chi University</p>
+        </div>
+    </div>
+    <div class="main" style="display: none;">
+        <div class="main-title">Degree of Education</div>
+        <div class="main-content-all">
+            <div class="main-content">
+                <div class="main-img"><img src="images/college.jpeg" alt=""></div>
+                <div class="main-text">
+                    <h1>慈濟學校財團法人慈濟大學</h1>
+                    <p> 就讀期間：2022.09 - 2026.07</p>
+                </div>
+            </div>
+            <div class="main-content">
+                <div class="main-img"><img src="images/senior-2.jpeg" alt=""></div>
+                <div class="main-text">
+                    <h1>高雄市立中正高級中學</h1>
+                    <p> 就讀期間：2019.09 - 2022.07</p>
+                </div>
+            </div>
         </div>
     </div>
         <div class="about">
@@ -125,7 +144,6 @@
         <div class="mark2"></div>
         <div class="skills-text-mark-block">
             <div class="skills-text-mark-block-img">
-                <img src="images/pr2.png" alt="">
                 <button class="skills-btn-1" id="skill-close">close</button>
             </div>
         </div>
@@ -188,22 +206,67 @@
         <h1>My philosophy</h1>
         <p>Time and efficiency are what I yearn for and have the courage to try and challenge.</p>
     </div>
-    <div class="main">
-        <div class="main-title">Degree of Education</div>
-        <div class="main-content-all">
-            <div class="main-content">
-                <div class="main-img"><img src="images/college.jpeg" alt=""></div>
-                <div class="main-text">
-                    <h1>慈濟學校財團法人慈濟大學</h1>
-                    <p> 就讀期間：2022.09 - 2026.07</p>
+    <div class="my-intro animate__animated">
+        <div class="size">
+            <div class="size-content r1">大</div>
+            <div class="size-content r2 change">中</div>
+            <div class="size-content r3">小</div>
+        </div>
+        <h1>Self-Introduction</h1>
+        <div class="my-intro-all">
+            <div class="my-intro-content">
+                <div class="my-intro-img"><img src="images/intro1.png" alt=""></div>
+                <div class="my-intro-text t1">
+                   <p> 我是一個相信勤能補拙的人，對於跳舞我可以說是非常不擅長，但是我很努力在練習，我花了比別人多很多時間在練習，從0.5倍速開始加到0.8倍速慢慢練習，動作記不起來或是覺得怪怪的就主動去請教會跳舞的室友，這樣子的練習也讓我在舞台上跟同學們成功演出一場舞蹈。</p>
+                    </div>
+                </div>
+            <div class="my-intro-content c2">
+                <div class="my-intro-text t2">
+                    <p>我喜歡挑戰自己不會做的事，像是我主動參加系聯歡的舞台劇的演出，我扮演的角色是馴鹿，我們花了很多時間在排練，常常剛好趕在23:00門禁以前才回到宿舍，當正式演出時台下觀眾的反應相當熱烈就讓我覺得這段時間的努力是值得的。</p>
+                     </div>
+                <div class="my-intro-img"><img src="images/intro2.png" alt=""></div>
+            </div>
+            <div class="my-intro-content c3 ">
+                <div class="my-intro-img"><img src="images/intro3.png" alt=""></div>
+                <div class="my-intro-text t3">
+                    <p> 我認為大一的時候應該學習一些跟本科系不太相關的課程以達到多元發展的目的，所以我選修了刑法總則的課程，我在課程裡學到很多跟公務員有關的知識，還參加了一場洗錢防治講座，讓我不只會物理治療的知識，還對金融法律方面有更多了解。</p>
                 </div>
             </div>
-            <div class="main-content">
-                <div class="main-img"><img src="images/senior-2.jpeg" alt=""></div>
-                <div class="main-text">
-                    <h1>高雄市立中正高級中學</h1>
-                    <p> 就讀期間：2019.09 - 2022.07</p>
+        </div>
+    </div>
+    <div class="achievement animate__animated">
+        <div class="achievement-title"><h1>Special Achievement</h1></div>
+        <div class="ach-content-all">
+            <div class="ach-content">
+                <div class="ach-img">
+                    <a href="#"><img src="images/special1.jpeg" alt=""></a>
+                    <div class="ach-img-text">
+                        <p>前往頁面</p>
+                    </div>
                 </div>
+                <h1>新生盃排球比賽亞軍</h1>
+                <p>新生盃排球比賽從剛開學打到最近才結束，我們分別遇到護理系、醫資系、醫學系、傳播系和人發心系這些很強勁的對手，我們物治系的同學常常利用下課時間相約一起去練球，我們有特別在發球方面加強，因為發球是可以左右一場比賽的關鍵，比賽的時候學長姐和系主任也有到場幫我們加油，幫我們增加氣勢。</p>
+            </div>
+            <div class="ach-content">
+                <div class="ach-img">
+                    <a href="#"><img src="images/special2.jpeg" alt=""></a>
+                    <div class="ach-img-text">
+                        <p>前往頁面</p>
+                    </div>
+                </div>
+                <h1>北復盃排球比賽季軍</h1>
+                <p>北復盃羽球季軍
+                    我是在上大學後才開始接觸羽球這個項目的，剛開始我連球都打不到，經過幾次練習後我才開始慢慢熟悉羽球，我也很認真在練習握拍、揮拍、和腳步，所以學長姐讓我參加女雙的項目增加經驗。</p>
+            </div>
+            <div class="ach-content">
+                <div class="ach-img">
+                    <a href="#"><img src="images/special-4.jpeg" alt=""></a>
+                    <div class="ach-img-text">
+                        <p>前往頁面</p>
+                    </div>
+                </div>
+                <h1>北復盃排球比賽亞軍</h1>
+                <p>北復盃排球亞軍排球比賽對我來說是相對熟悉的一項活動，我很高興可以跟大二和大三的學姐們一起出去比賽，我很高興自己在場上有攻擊得分，幫學姐分擔比賽的緊張感。</p>
             </div>
         </div>
     </div>
@@ -229,70 +292,6 @@
             <div class="chart">
                 <h2>Problem-Solving</h2>
                 <div class="d1" id="donut_single5"></div>
-            </div>
-        </div>
-    </div>
-    <div class="my-intro animate__animated">
-        <div class="size">
-            <div class="size-content r1">大</div>
-            <div class="size-content r2 change">中</div>
-            <div class="size-content r3">小</div>
-        </div>
-        <h1>Self-Introduction</h1>
-        <div class="my-intro-all">
-            <div class="my-intro-content">
-                <div class="my-intro-img"><img src="images/IMG_2700.JPG" alt=""></div>
-                <div class="my-intro-text t1">
-                   <p> ⽗母給予的教育以態度與自律為重，求學階段⼀概給予孩⼦追求自我目標的權利。從國小⾄今，學習到的七⼤能⼒：⾏動、計畫、思考、變通、自省、謹慎以及記憶⼒，才是⽗母對於孩⼦的期待，常以「態度決定⾼度」為培養理念，讓孩⼦在理想且安全的教育環境下成長。在⽗母的細⼼栽培下，身為孩⼦的我，為了不辜負⽗母的用⼼，努⼒著不斷追求自己的理想與更⾼且更好的境界。</p>
-                    </div>
-                </div>
-            <div class="my-intro-content c2">
-                <div class="my-intro-text t2">
-                    <p>國中時期的我，課業上的問題時常是在社群討論區解決的，使我能夠在學科上奠定良好的基礎。他們的教學熱忱，促成了我在國三會考結束後，主動的回到社群中去幫助其他的學弟妹；⾄今已經三年，除了在萬⼈物理解題社群中獲得了全體答題率第七名的榮耀外，也得到了不少學弟妹的稱讚與肯定。林林總總的支持與回饋造就了我對於教學他⼈充滿著強烈的熱忱，希望能夠藉由教學與幫助他⼈的⽅式，將曾經受恩無量的恩情傳承下去，去影響、去擴展到更多的學⽣。</p>
-                     </div>
-                <div class="my-intro-img"><img src="images/L1.jpg" alt=""></div>
-            </div>
-            <div class="my-intro-content c3 ">
-                <div class="my-intro-img"><img src="images/IMG_2702.JPG" alt=""></div>
-                <div class="my-intro-text t3">
-                    <p> 我是⼀個正向樂觀的⼈。時常以正面思考的⽅式去修正、去克服，並且在他⼈有困難時，以傾聽的⽅式陪伴他⼈(同學、家⼈等等)⼀同度過難關，引領他⼈往更好的境界發展。使他⼈不會因阻礙⽽討厭物理，⽽是以解題後的成就感培養對於物理學科的熱忱，並且把此份無私的幫助傳承下去。</p>
-                     <p>我也是個喜愛與⼈共處互動的社交愛好者，在學科⽅面上盡⼒追求後，不妨會去參加或承辦不同的活動，去擴展自⼰的社交圈。也因為如此，我創辦了⼀支學術性的讀書紀錄帳，在閒暇時間，去幫助他⼈解決物理科問題，去認識全國各地不同的學⽣、老師等等。</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="achievement animate__animated">
-        <div class="achievement-title"><h1>Special Achievement</h1></div>
-        <div class="ach-content-all">
-            <div class="ach-content">
-                <div class="ach-img">
-                    <a target="_blank" href="#"><img src="images/special1.jpeg" alt=""></a>
-                    <div class="ach-img-text">
-                        <p>前往頁面</p>
-                    </div>
-                </div>
-                <h1>新生盃排球比賽亞軍</h1>
-                <p>高中時期所創建之學術分享帳，因長期的分享與協助學弟妹解決物理學科上的種種問題而受到親睞。在一次的台大電機系葉丙成教授演講過程中，交大化學系的教授在媒體面前讚揚我的帳號與付出，因而受到天下雜誌教育專欄的推薦。</p>
-            </div>
-            <div class="ach-content">
-                <div class="ach-img">
-                    <a target="_blank" href="#"><img src="images/special2.jpeg" alt=""></a>
-                    <div class="ach-img-text">
-                        <p>前往頁面</p>
-                    </div>
-                </div>
-                <h1>北復盃排球比賽季軍</h1>
-                <p>前兩次參與了此類數理能力競賽並無獲得良好的成績，直到最終的第四屆與第五屆才依序獲得了銅牌與銀牌，說明了雖然天賦不如人，但只要肯努力終能獲得回報。不要因為一次的失敗而氣餒，才是參與這項競賽所獲得的最佳心得。</p>
-            </div>
-            <div class="ach-content">
-                <div class="ach-img">
-                    <a target="_blank" href="#"><img src="images/special3.jpeg" alt=""></a>
-                    <div class="ach-img-text">
-                        <p>前往頁面</p>
-                    </div>
-                </div>
-                <h1>北復盃排球比賽亞軍</h1>
-                <p>個人以自我推薦的方式獲選基礎科學教育研習的機會，其中製作了十四份的數理科研習研究，最終以 13/14 A級的成績獲得了理學院院長獎佳作的表揚。在過程中也獲得了四次的優秀專題榮譽，讓我在此次的研習競賽中受益良多。</p>
             </div>
         </div>
     </div>
@@ -338,10 +337,4 @@
         </div>
     </div>
 </body>
-<script>
-    var end =new Date().getMilliseconds();
-    var total =end-now;
-    alert("此為電腦版網頁，請使用電腦欣賞。 加載時長："+total+"ms");
-</script>
-
 </html>
