--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <div class="list">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Basic</a></li>
-                <li><a href="#">Academic</a></li>
-                <li><a href="#">Process</a></li>
-                <li><a href="#">Plan</a></li>
+                <li><a href="#about">Skill</a></li>
+                <li><a href="#intro">Intro</a></li>
+                <li><a href="#special">Special</a></li>
+                <li><a href="#opinion">Opinion</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -115,7 +115,7 @@
             </div>
         </div>
     </div>
-        <div class="about">
+        <div class="about" id="about">
             <h1 class="animate__animated ">About ME</h1>
             <p>Pursue my ideals and face our own life with enthusiasm.</p>
             <div class="about-block">
@@ -139,7 +139,7 @@
             </div>
         </div>
     </div>
-    <div class="skills">
+    <div class="skills" id="skills">
         <div class="mark1"></div>
         <div class="mark2"></div>
         <div class="skills-text-mark-block">
@@ -206,7 +206,7 @@
         <h1>My philosophy</h1>
         <p>Time and efficiency are what I yearn for and have the courage to try and challenge.</p>
     </div>
-    <div class="my-intro animate__animated">
+    <div class="my-intro animate__animated" id="intro">
         <div class="size">
             <div class="size-content r1">大</div>
             <div class="size-content r2 change">中</div>
@@ -234,7 +234,7 @@
             </div>
         </div>
     </div>
-    <div class="achievement animate__animated">
+    <div class="achievement animate__animated" id="special">
         <div class="achievement-title"><h1>Special Achievement</h1></div>
         <div class="ach-content-all">
             <div class="ach-content">
@@ -270,7 +270,7 @@
             </div>
         </div>
     </div>
-    <div class="chart-block-all animate__animated">
+    <div class="chart-block-all animate__animated" id="opinion">
         <h1>Self-Judgment</h1>
         <div class="chart-block">
             <div class="chart">
