--- a/index.html
+++ b/index.html
@@ -150,52 +150,52 @@
         <h1 class="animate__animated">My skills for Another Area</h1>
         <ul>
             <li>
-                <img src="images/piano-s.png" alt="">
+                <img src="images/pianos.png" alt="">
                 <div class="skill-text">Piano</div>
                 <div class="level" style="background: brown ;">進階</div>
             </li>
             <li>
-                <img src="images/flute-s.png" alt=""> 
+                <img src="images/flutes.png" alt=""> 
                 <div class="skill-text">Flute</div>
                 <div class="level">精熟</div>
             </li>
             <li>
-                <img src="images/cello-s.png" alt=""> 
+                <img src="images/cellos.png" alt=""> 
                 <div class="skill-text">Cello</div>
                 <div class="level" style="background: green ;">基礎</div>
             </li>
             <li>
-                <img src="images/stage-s.png" alt="">
+                <img src="images/stages.png" alt="">
                 <div class="skill-text">Stage Show</div>
                 <div class="level2" style="background:green ;">基礎</div>
             </li>
             <li>
-                <img src="images/act-s.png" alt=""> 
+                <img src="images/acts.png" alt=""> 
                 <div class="skill-text">Actress</div>
                 <div class="level" style="background: green ;">基礎</div>
             </li>
             <li>
-                <img src="images/singer-s.png" alt=""> 
+                <img src="images/singers.png" alt=""> 
                 <div class="skill-text">Singer</div>
                 <div class="level2" style="background: green ;">基礎</div>
             </li>
             <li>
-                <img src="images/film-s.png"  alt=""> 
+                <img src="images/films.png"  alt=""> 
                 <div class="skill-text">Film Edit</div>
                 <div class="level2" style="background: green ;">基礎</div>
             </li>
             <li>
-                <img src="images/volley-s.png" alt=""> 
+                <img src="images/volleys.png" alt=""> 
                 <div class="skill-text">VolleyBall</div>
                 <div class="level" style="background: brown ;">進階</div>
             </li>
             <li>
-                <img src="images/badminton-s.png" alt=""> 
+                <img src="images/badmintons.png" alt=""> 
                 <div class="skill-text">BadMinton</div>
                 <div class="level" style="background: green ;">基礎</div>
             </li>  
             <li>
-                <img src="images/book-s.png" alt=""> 
+                <img src="images/reads.png" alt=""> 
                 <div class="skill-text">Reading</div>
                 <div class="level" style="background: brown ;">進階</div>
             </li>  
