--- a/index.html
+++ b/index.html
@@ -302,19 +302,13 @@
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p>我記得是高一剛開學就追蹤你了，那時候的限動的確每天都很多則，但我覺得很中肯很直接很real，每次那個字都很小我都要慢慢看。追蹤兩年半的時間我覺得你那個幫助人的心還是不變的 👍 然後之前你分享很多的那些筆記資源呀 真的很實用，還好那些有典藏的我之前有先截圖(應該沒關係吧...沒外流)，謝謝你！ 這些資源在學測的路上幫我很大。 我記得還有一個以前你很常半夜凌晨發限動😂 現在好像比較少了可以回fb發😂
-                    紫色在手機上看是真的有點亮(關燈在床上看)心得紀錄有時候嗆別人的很有趣(心情不好的時候最適合看) , 有時候又是很有深度的言論🤔那個之後9月我也會變大學生了我也可以跟你領取普物普化的筆記嗎🤗 可惜我是男的在離公館超近，但約出來吃蛋糕感覺怪怪特別的😂😂</p>
+                <p>你是一個做事認真負責的人，對於國文的分組作業再忙也會好好分配時間完成，那個簡報的作業做得真的很好！演戲的時候很大方，比其他人都勇敢表現，你很樂觀開朗，之前我在比賽的時候狀態很差好幾球都打不好，你也沒有發脾氣，而且還鼓勵我跟我說沒事啦，你真的是一個很棒的人。</p>
             </div>
         </div>
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p> 我覺得這個帳號跟其他帳號都很不同，同時也因為不會和其他帳號重複性太高，所以我才會
-                    選擇追蹤。高一的時候我還滿不喜歡物理的，而且同時也因為學的不夠深，基本上每次的內
-                    容我都沒有參與，但我還是看完了，漸漸的，也慢慢對物理產生興趣，對各種不一樣的解法
-                    產生好奇，而且你願意花時間幫助大家解題，提供大家各種升學資訊，對我幫助很大。前陣
-                    子看到限動上說有人批評這個帳號不像讀書帳時，覺得感觸滿多的，也希望這個帳號不要改
-                    變，正因為這個帳號的不同，所以我才會願意花時間看，希望你能一直堅持下去。
+                <p>你的個性有時候呆呆的，接收到太多資訊的時候會變遲鈍，有時候不小心略過一些人的話要注意一下，跟你講話要慢慢講不然妳會接收不到，你還會叫我再說一次，超好笑的。你也是一個溫柔不容易生氣的人，你在面對困難的時候不會先去怪別人而是先檢討自己，這樣的個性很討喜喔。
                   </p>
             </div>
         </div>
