--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
         <div class="feedback">
             <div class="feed-img"><img src="images/person.png" alt=""></div>
             <div class="feed-text">
-                <p>晚上好~我也是潛水的粉絲🙋，剛剛看了你的直播講了許多故事，最後決定也浮出水面一下(?)很謝謝你帶給大家很多資源還有在高一高二時讓我更有動力讀書(因為限動真的蠻多的哈哈)。之前也有跟到戴蛙鏡的直播XDD
-                    很可惜那時隔天有事不能跟到最後，總而言之真的很感謝!!BTW,剛剛聽你提到明天要去淡水玩，我是淡水人，建議多穿一點才能在雨中享受浪漫(?)下雨+冬天真的又濕又冷，如果出太陽的話可以騎腳踏車去漁人碼頭，風景也很不錯!最後，祝你未來能在遇到難關時一一破解。新年快樂🎉
+                <p>很欣賞你的熱情，不擅長打排球卻還是很喜歡打排球，雖然都發不過高手發球，還是一直在練習，我相信你總有一天可以打好的，到時候我會跟你一起慶祝的。我希望你可以讓練習變得更有效率，就是進步的幅度可以在更少的時間內獲得更多，這樣你會變得更好。
                     </p>
             </div>
         </div>
